--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -362,7 +362,7 @@ ja:
       title: 新規チャット
     primer: 
       create_first: プロジェクトの最初のチャットを始めましょう!
-      define: チャットを使って<b>意思決定のための議論</b>や、<b>チームへの情報更新</b>を集中させることができます。<br/>チャットはスレッドになったコメントで、乱雑なメールによるやりとりに代わるものです。
+      define_html: チャットを使って<b>意思決定のための議論</b>や、<b>チームへの情報更新</b>を集中させることができます。<br/>チャットはスレッドになったコメントで、乱雑なメールによるやりとりに代わるものです。
       empty: このプロジェクトにはまだチャットがありません。
       footer1_html: チャットは<b>デザインを共有</b>したり、ミーティングの<b>日程</b>を決めたり、ニュースを<b>周知</b>するのにとても便利です。
       footer2_html: スレッドになっているので、過去どんなファイルが送られたか、チームメイトが何を言ったかをさっと振り返ることができます。Teamboxでは、<b>共同作業がそのまま報告</b>なのです。
@@ -1468,7 +1468,7 @@ ja:
       undefined: 未定義
     primer: 
       create_first: 最初のタスクリストを作成しましょう!
-      define: "タスクを使って<b>先の計画を立てたり</b>、<b>進捗を把握したり</b>、<b>作業のレビュー</b>をしたりします。<br/><i>何を? 誰が? いつやるの?</i> タスクには状態と割当て、そして期限を設定することができます。"
+      define_html: "タスクを使って<b>先の計画を立てたり</b>、<b>進捗を把握したり</b>、<b>作業のレビュー</b>をしたりします。<br/><i>何を? 誰が? いつやるの?</i> タスクには状態と割当て、そして期限を設定することができます。"
       empty: このプロジェクトにはまだタスクリストがありません。
       footer1_html: タスクは<b>物事を済ます</b>ための簡単でアジャイルな方法です。他の人にも勧めましょう。
       footer2_html: Excelの計画シートや複雑なガントチャートは忘れてしまいましょう!
@@ -1642,11 +1642,11 @@ ja:
       picture: 
         destroy: アバターを削除
         field: あなたのアバター
-        gravatar_in_use: "あなたの写真がありませんので%{gravatar}: を利用しています。"
+        gravatar_in_use_html: "あなたの写真がありませんので%{gravatar}: を利用しています。"
         max_size: "ファイルサイズは%{mb}におさめる必要があります"
         presence: 空ファイルはアップロードできません
-        upload_here_or_at_gravatar: "ここでアバターをアップロードするか、%{gravatar}にアップロードして、Teamboxだけではなく他の多くのウェブサイトで利用できるようにもできます。"
-        we_have_this_avatar: "現在のあなたのアバターです:"
+        upload_here_or_at_gravatar_html: "ここでアバターをアップロードするか、%{gravatar}にアップロードして、Teamboxだけではなく他の多くのウェブサイトで利用できるようにもできます。"
+        we_have_this_avatar_html: "現在のあなたのアバターです:"
       biography: 自己紹介
       change_password: パスワード変更
       confirm_password: パスワード確認
