--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -306,7 +306,7 @@ ko:
       title: "새로운 대화"
     primer: 
       create_first: "이 프로젝트에서 첫 대화를 만드세요!"
-      define: "<b>의견을 교환</b> 하고 <b>팀의 상태를 업데이트</b>하기 위해 대화를 사용하세요.<br/>각각의 대화는 복잡한 이메일 대화의 수고를 줄여줍니다."
+      define_html: "<b>의견을 교환</b> 하고 <b>팀의 상태를 업데이트</b>하기 위해 대화를 사용하세요.<br/>각각의 대화는 복잡한 이메일 대화의 수고를 줄여줍니다."
       empty: "프로젝트 내의 대화가 아직 없습니다."
       footer1_html: "<b>디자인을 공유</b>하고, 회의 <b>날짜를 결정</b>하거나 새로운 뉴스를 <b>보고</b>하는데 대화는 좋은 수단입니다."
       footer2_html: "대화가 시작되면 이전의 대화를 거슬러 올라가 어떤 파일이 발송되었는지, 어떤 대화가 오고 갔는지 쉽게 알 수 있습니다. <b>협동은 곧 대화입니다.</b>."
@@ -1278,7 +1278,7 @@ ko:
       undefined: "정해지지 않음"
     primer: 
       create_first: "첫 번째 테스크 리스트를 만드세요!"
-      define: "테스크를 사용해서<b>미리 계획을 하고</b>, <b>진척상황을 확인</b>하고 <b>무엇이 완료되었는지</b>검토해 보세요.<br/><i>언제, 누가, 무엇을</i>하는지에 대해 확인할 수 있습니다. 테스크는 상태, 할당된 사람, 완료기한을 가질 수 있습니다."
+      define_html: "테스크를 사용해서<b>미리 계획을 하고</b>, <b>진척상황을 확인</b>하고 <b>무엇이 완료되었는지</b>검토해 보세요.<br/><i>언제, 누가, 무엇을</i>하는지에 대해 확인할 수 있습니다. 테스크는 상태, 할당된 사람, 완료기한을 가질 수 있습니다."
       empty: "이 프로젝트에 테스크 리스트가 아직 없습니다.."
       footer1_html: "테스크들은 <b>get things done</b>을 위한 간단하고 애자일한 방법입니다."
       footer2_html: "이제는 엑셀 시트와 복잡한 간트챠트는 잊을 때 입니다!"
@@ -1452,11 +1452,11 @@ ko:
       picture: 
         destroy: "아바타 삭제"
         field: "새로운 아바타"
-        gravatar_in_use: "사진이 업로드 되어있지 않습니디. 다음의 기본 사진을 아바타로 사용하겠습니다 %{gravatar}:"
+        gravatar_in_use_html: "사진이 업로드 되어있지 않습니디. 다음의 기본 사진을 아바타로 사용하겠습니다 %{gravatar}:"
         max_size: " 파일 크기는 %{mb} 메가 를 넘을 수 없습니다."
         presence: " 파일을 첨부해주시기 바랍니다."
-        upload_here_or_at_gravatar: "사진을 업로드 하거나 다음중에서 고를 수 있습니다. %{gravatar}."
-        we_have_this_avatar: "다음의 사진이 업로드 되어 있습니다 :"
+        upload_here_or_at_gravatar_html: "사진을 업로드 하거나 다음중에서 고를 수 있습니다. %{gravatar}."
+        we_have_this_avatar_html: "다음의 사진이 업로드 되어 있습니다 :"
       biography: 자기소개
       change_password: "패스워드 수정"
       confirm_password: "패스워드 확인"
