--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -385,7 +385,7 @@ ru:
       title: "Новое обсуждение"
     primer: 
       create_first: "Создайте первое обсуждение проекта!"
-      define: "Обсуждения позволяют <b>согласовывать решения</b> и <b>держать в курсе сразу всю команду</b> .<br/>Каждое обсуждение — это поток комментариев, заменяющий трудоемкую переписку по электронной почте."
+      define_html: "Обсуждения позволяют <b>согласовывать решения</b> и <b>держать в курсе сразу всю команду</b> .<br/>Каждое обсуждение — это поток комментариев, заменяющий трудоемкую переписку по электронной почте."
       empty: "В этом проекте ещё нет обсуждений."
       footer1_html: "Обсуждения олично подходят для <b>согласования дизайна</b>, <b>выбора даты</b> встречи или <b>обмена</b> новостями."
       footer2_html: "Сообщения будут отображаться в виде ленты, вы легко сможете отследить, какие файлы были посланы и что сказал каждый участник. <b>Сотрудничество с помощью Teambox — это автоматические отчеты о проделанной работе</b>."
@@ -1689,7 +1689,7 @@ ru:
       undefined: "Не определено"
     primer: 
       create_first: "Создайте первый список задач в этом проекте!"
-      define: "Задачи нужны, чтобы <b>планировать</b>, <b>следить за выполнением</b> и <b>проверять, что было сделано</b>.<br/><i>Что, Кто и Когда?</i> У задачи есть статус, ответственный участник и срок."
+      define_html: "Задачи нужны, чтобы <b>планировать</b>, <b>следить за выполнением</b> и <b>проверять, что было сделано</b>.<br/><i>Что, Кто и Когда?</i> У задачи есть статус, ответственный участник и срок."
       empty: "В этом проекте пока нет списков задач."
       footer1_html: "Задачи — простой и гибкий способ <b>воплощать задуманное</b> и рассказывать об этом другим."
       footer2_html: "Пора забыть экселевские таблички с планированием и сложные графики Гантта!"
@@ -1891,11 +1891,11 @@ ru:
       picture: 
         destroy: "Удалить аватар"
         field: "Ваш аватар"
-        gravatar_in_use: "У нас нет вашего изображения, поэтому мы используем %{gravatar}."
+        gravatar_in_use_html: "У нас нет вашего изображения, поэтому мы используем %{gravatar}."
         max_size: "Нельзя загружать файл больше %{mb}"
         presence: "Нельзя загружать пустой файл"
-        upload_here_or_at_gravatar: "Вы можете загрузить аватар здесь или на %{gravatar}."
-        we_have_this_avatar: "Аватар уже загружен:"
+        upload_here_or_at_gravatar_html: "Вы можете загрузить аватар здесь или на %{gravatar}."
+        we_have_this_avatar_html: "Аватар уже загружен:"
       sunday: Воскресенье
       time_zone: "Часовой пояс"
     new: 
