--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -198,9 +198,9 @@ en:
         field: New avatar
         presence: "You can't upload a blank file"
         max_size: "File size can't exceed %{mb}"
-        we_have_this_avatar: "This is the picture we currently have of you:"
-        gravatar_in_use: "We don't have a picture of you, so we're using %{gravatar}."
-        upload_here_or_at_gravatar: "You can either upload a picture here or set one on %{gravatar}."
+        we_have_this_avatar_html: "This is the picture we currently have of you:"
+        gravatar_in_use_html: "We don't have a picture of you, so we're using %{gravatar}."
+        upload_here_or_at_gravatar_html: "You can either upload a picture here or set one on %{gravatar}."
         destroy: Delete avatar
       new:
         use_this_email: "You have invitations to share projects for this email address. If you want to access these projects, don't change this email address. You can change your email address once you've completed the signup process."
